# matrafl

./: Cargo.toml  Justfile  README.md  bacon.toml  build.rs
assets/: main.css  main.js  manifest.webmanifest
migrations/: 001_setup.sql
src/: db.rs  handler.rs  html.rs  main.rs
