[package]
name = "matrafl"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["form", "tracing", "macros"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
base16ct = { version = "0.2.0", features = ["alloc"] }
chrono = { version = "0.4.39", features = ["serde"] }
cookie = "0.18.1"
maud = "0.26.0"
rand = "0.8.5"
rpassword = "7.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono"] }
time = "0.3.37"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread"] }
tokio-cron-scheduler = "0.13.0"
tower-http = { version = "0.6.2", features = ["compression-br", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
chrono = { version = "0.4.39" }
